--- a/src/renderer/src/assets/tailwind.css
+++ b/src/renderer/src/assets/tailwind.css
@@ -6,6 +6,9 @@
   .cus-scrollbars {
     @apply scrollbar-thin scrollbar-thumb-gray-300 dark:scrollbar-thumb-gray-700 scrollbar-track-transparent;
   }
+  .cus-light-scrollbars {
+    @apply scrollbar-thin scrollbar-thumb-gray-300 dark:scrollbar-thumb-gray-600 scrollbar-track-transparent;
+  }
 }
 
 .cm-scroller {
